--- a/src/app/users/users-form/users-form.component.less
+++ b/src/app/users/users-form/users-form.component.less
@@ -88,7 +88,7 @@ input.ng-touched.ng-valid{
   border:solid @lightgray 2px;
 }
 
-.transparent-button {
+/*.transparent-button {
   display: flex;
   margin: 0 2px auto;
   padding: 8px 40%;
@@ -102,5 +102,5 @@ input.ng-touched.ng-valid{
 .transparent-button:hover{
   background-color: @slategray;
   color: @white;
-}
+}*/
 
