--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -9,3 +9,35 @@ ul[class],
 ol[class] {
   list-style: none;
 }
+.transparent-button {
+  display: flex;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  padding: 8px 40%;
+  width: 100%;
+  background: rgba(255, 255, 255, 0.5);
+  border-radius: 8px;
+  color: @slategray;
+  text-align-all: center;
+  letter-spacing: 1px;
+  transition: all 0.3s ease-out;
+}
+.transparent-button:hover{
+  background-color: @slategray;
+  color: @white;
+}
+input.ng-touched.ng-invalid{
+  border:solid @hex 2px;
+}
+input.ng-touched.ng-valid{
+  border:solid @lightgray 2px;
+}
+.validtext {
+  width: 100%;
+  color: @black;
+  background-color: @hex;
+  text-align: center;
+  padding: 5px 0;
+  border-radius: 6px;
+  margin-bottom: 5px;
+}
