--- a/src/app/users/users-form/users-form.component.html
+++ b/src/app/users/users-form/users-form.component.html
@@ -6,62 +6,51 @@
 </head>
 <body>
 <div class="users__form visible">
-    <div class="users__form-content">
-      <div class="users__form-body">
-        <form  *ngIf="!confirm; else confirmTemplate"noValidate [formGroup]="formUser" class="edit-incident"
-               (ngSubmit)="submitForm()">
+  <div class="users__form-content">
+    <div class="users__form-body">
+      <form  *ngIf="!confirm; else confirmTemplate"noValidate [formGroup]="formUser" class="edit-incident"
+             (ngSubmit)="submitForm()">
 
-          <div class="form-control">
-            <label class="form-control-label">{{ 'USERSFORM.LOGIN' | translate }}</label>
-            <input class="form-control-action" formControlName="login" type="string">
-            <div class="validtext"
-                 *ngIf="formUser.controls['login'].invalid && formUser.controls['login'].touched">
-            </div>
-          </div>
+        <label class="form-control-label">{{ 'USERSFORM.LOGIN' | translate }}</label>
+        <input class="form-control-action" formControlName="login" type="string">
+        <div class="validtext"
+             *ngIf="formUser.controls['login'].invalid && formUser.controls['login'].touched">
+          {{ 'INVALID.LOGIN' | translate }}</div>
 
-          <div class="form-control">
-            <label class="form-control-label">{{ 'USERSFORM.PASSWORD' | translate }}</label>
-            <input class="form-control-action" formControlName="password" type="string">
-            <div class="validtext"
-                 *ngIf="formUser.controls['password'].invalid && formUser.controls['password'].touched">
-            </div>
-          </div>
+        <label class="form-control-label">{{ 'USERSFORM.PASSWORD' | translate }}</label>
+        <input class="form-control-action" formControlName="password" type="string">
+        <div class="validtext"
+             *ngIf="formUser.controls['password'].invalid && formUser.controls['password'].touched">
+          {{ 'INVALID.PASSWORD' | translate }}</div>
 
-          <div class="form-control">
-            <label class="form-control-label">{{ 'USERS.POSITION' | translate }}:</label>
-            <input class="form-control-action" formControlName="position" type="string">
-            <div class="validtext"
-                 *ngIf="formUser.controls['position'].invalid && formUser.controls['position'].touched">
-            </div>
-          </div>
+        <label class="form-control-label">{{ 'USERS.POSITION' | translate }}:</label>
+        <input class="form-control-action" formControlName="position" type="string">
+        <div class="validtext"
+             *ngIf="formUser.controls['position'].invalid && formUser.controls['position'].touched">
+          {{ 'INVALID.POSITION' | translate }}</div>
 
-          <div class="form-control">
-            <label class="form-control-label">{{ 'USERS.USER' | translate }}:</label>
-            <input class="form-control-action" formControlName="surname" type="string">
-            <div class="validtext"
-                 *ngIf="formUser.controls['surname'].invalid && formUser.controls['surname'].touched">
-              Name must not contain numbers.
-            </div>
-          </div>
+        <label class="form-control-label">{{ 'USERS.USER' | translate }}:</label>
+        <input class="form-control-action" formControlName="surname" type="string">
+        <div class="validtext"
+             *ngIf="formUser.controls['surname'].invalid && formUser.controls['surname'].touched">
+          {{ 'INVALID.SURNAME' | translate }}</div>
 
-          <div class="form-control">
-            <label class="form-control-label">{{ 'USERS.BIRTHDAY' | translate }}:</label>
-            <input class="form-control-action" formControlName="birthday" type="date">
-            <div class="validtext"
-                 *ngIf="formUser.controls['birthday'].invalid && formUser.controls['birthday'].touched">
-            </div>
-          </div>
-          <button class="transparent-button"
-                  routerLink="/main/users">{{ 'USERSFORM.BACK' | translate }}</button>
-          <button class="transparent-button" type="submit">{{ 'USERS.ADDUSER' | translate }}</button>
+        <label class="form-control-label">{{ 'USERS.BIRTHDAY' | translate }}:</label>
+        <input class="form-control-action" formControlName="birthday" type="date">
+        <div class="validtext"
+             *ngIf="formUser.controls['birthday'].invalid && formUser.controls['birthday'].touched">
+          {{ 'INVALID.BIRTHDAY' | translate }}</div>
 
-        </form>
-        <ng-template #confirmTemplate>
-          <p>{{ 'USERSFORM.DOYOUWANT' | translate }}</p>
-          <button class="transparent-button" (click)="delete()">{{ 'USERSFORM.DELETE' | translate }}</button><button class="transparent-button" routerLink="/main/users">{{ 'USERSFORM.CANCEL' | translate }}</button>
-        </ng-template>
-      </div>
+        <button class="transparent-button" routerLink="/main/users">{{ 'USERSFORM.BACK' | translate }}</button>
+        <button class="transparent-button" type="submit">{{ 'USERS.ADDUSER' | translate }}</button>
+
+      </form>
+      <ng-template #confirmTemplate>
+        <p>{{ 'USERSFORM.DOYOUWANT' | translate }}</p>
+        <button class="transparent-button" (click)="delete()">{{ 'USERSFORM.DELETE' | translate }}</button><button class="transparent-button" routerLink="/main/users">{{ 'USERSFORM.CANCEL' | translate }}</button>
+      </ng-template>
     </div>
+  </div>
 
 </div>
 
