--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -4,16 +4,22 @@
   <meta charset="utf-8" />
   <title>Project</title>
 </head>
-<header>
-  <div class="header">
-    <div class="header__name">{{ 'MAIN.PROJECT' | translate }}</div>
-    <a *ngIf="!authService.logIn" class="table-button header__entry" href="/main/reg">{{ 'MAIN.SIGN' | translate }}</a>
-    <a *ngIf="!authService.logIn" class="table-button header__entry" href="/main/auth">{{ 'MAIN.LOGIN' | translate }}</a>
-    <button *ngIf="authService.logIn" class="table-button header__entry" (click)="logoutUser()">{{ 'MAIN.EXIT' | translate }}</button>
-      <label class="header__lang">{{ 'LANGUAGES.TITLE' | translate }}
+<header class="header">
+  <div class="header__name">{{ 'MAIN.PROJECT' | translate }}</div>
+  <div class="header__profile">
+    <label class="header__lang">{{ 'LANGUAGES.TITLE' | translate }}
       <select (change)="changeLocale()" [(ngModel)]="selectedLanguage">
         <option *ngFor="let language of languages" [value]="language.id">{{ language.title }}</option>
       </select></label>
+    <div class="header__profile-icon">
+      <svg class="icon">
+        <use xlink:href="./assets/images/user.svg#icon-user"></use>
+      </svg>
+      <span *ngIf="authService.logIn" class="header__entry">{{user.surname}}</span>
+      <a *ngIf="!authService.logIn" class="table-button header__entry" href="/main/auth">{{ 'MAIN.LOGIN' | translate }}</a>
+    </div>
+    <button *ngIf="authService.logIn" class="table-button header__entry" (click)="logoutUser()">{{ 'MAIN.EXIT' | translate }}</button>
+
   </div>
 </header>
 <main>
